--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer class="footer">
-      <p>Hecho por Aissa · GitHub Actions 🚀</p>
+      <p>Hecho por Aissa · GitHub Actions 🚀 --------------</p>
     </footer>
   </body>
 </html>
